[project]
name = "civitai-discovery-hub"
description = "This ComfyUI node lets you browse the Civitai gallery directly within the interface, featuring infinite scroll, advanced filters (including NSFW), and favorites management. It also allows you to retrieve prompts, metadata, and images/videos to seamlessly reuse them in your workflows."
version = "1.0.5"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["numpy>=1.21.0", "Pillow>=9.0.0", "aiohttp>=3.8.0"]

[project.urls]
Repository = "https://github.com/Light-x02/ComfyUI-Civitai-Discovery-Hub"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Light-x02/ComfyUI-Civitai-Discovery-Hub/wiki"
"Bug Tracker" = "https://github.com/Light-x02/ComfyUI-Civitai-Discovery-Hub/issues"

[tool.comfy]
PublisherId = "lightx02"
DisplayName = "ComfyUI-Civitai-Discovery-Hub"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

